--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Champ</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/46cfeaa23d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/gym-2.jpg" alt="gym-2" class="services__img animate-img">
+                <img src="images/gym-2.jpg" alt="gym-2" class="services__img animate-img">
             </div>
         </div>
     </div>
@@ -135,22 +135,22 @@
             </div>
             <div class="team__card animate-team">
                 <p>Shakira</p>
-                <img src="/images/dusan-jovic-yw5WsApy1Sk-unsplash.jpg" alt="Person Trainer Shakira" class="team__img">
+                <img src="images/dusan-jovic-yw5WsApy1Sk-unsplash.jpg" alt="Person Trainer Shakira" class="team__img">
             </div>
 
             <div class="team__card animate-team">
                 <p>Philip</p>
-                <img src="/images/filip-mroz-C3Qs4MbxeKY-unsplash (1).jpg" alt="Person Trainer Shakira" class="team__img">
+                <img src="images/filip-mroz-C3Qs4MbxeKY-unsplash (1).jpg" alt="Person Trainer Shakira" class="team__img">
             </div>
 
             <div class="team__card animate-team">
                 <p>Nzinga</p>
-                <img src="/images/victor-amenze-lyKYUOdvsEs-unsplash.jpg" alt="Person Trainer Shakira" class="team__img">
+                <img src="images/victor-amenze-lyKYUOdvsEs-unsplash.jpg" alt="Person Trainer Shakira" class="team__img">
             </div>
 
             <div class="team__card animate-team">
                 <p>Edgar</p>
-                <img src="/images/edgar-chaparro-sHfo3WOgGTU-unsplash.jpg" alt="Person Trainer Shakira" class="team__img">
+                <img src="images/edgar-chaparro-sHfo3WOgGTU-unsplash.jpg" alt="Person Trainer Shakira" class="team__img">
             </div>
 
         </div>
@@ -183,25 +183,25 @@
             </div>
             <div class="footer__links">
                 <h2 class="footer__title">Contact Us</h2>
-                <a href="/services.html" class="footer__link">Contact</a>
-                <a href="/services.html" class="footer__link">Support</a>
-                <a href="/services.html" class="footer__link">Sponsor</a>
+                <a href="services.html" class="footer__link">Contact</a>
+                <a href="services.html" class="footer__link">Support</a>
+                <a href="services.html" class="footer__link">Sponsor</a>
             </div>
         </div>
         <div class="footer__wrapper">
             <div class="footer__links">
                 <div class="footer__title">Memebership</div>
-                <a href="/services.html" class="footer__link">Pricing</a>
-                <a href="/services.html" class="footer__link">Plans</a>
-                <a href="/services.html" class="footer__link">FAQ</a>
+                <a href="services.html" class="footer__link">Pricing</a>
+                <a href="services.html" class="footer__link">Plans</a>
+                <a href="services.html" class="footer__link">FAQ</a>
             </div>
 
             <div class="footer__links">
                 <div class="footer__title">Social Media</div>
-                <a href="/services.html" class="footer__link">Instagram</a>
-                <a href="/services.html" class="footer__link">Facebook</a>
-                <a href="/services.html" class="footer__link">Youtube</a>
-                <a href="/services.html" class="footer__link">Twitter</a>
+                <a href="services.html" class="footer__link">Instagram</a>
+                <a href="services.html" class="footer__link">Facebook</a>
+                <a href="services.html" class="footer__link">Youtube</a>
+                <a href="services.html" class="footer__link">Twitter</a>
             </div>
 
 
@@ -209,6 +209,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
